--- a/tutorials/assets/motw-doc.css
+++ b/tutorials/assets/motw-doc.css
@@ -34,6 +34,7 @@ body {
 code {
   font-family: 'Roboto Mono', 'Consolas', 'Menlo', monospace;
   -webkit-font-smoothing: antialiased;
+  color: #e91e63;
 }
 
 h1, h2, h3, h4 {
